# FRAUDGAURD

./: .gitignore  MODEL_EVALUATION_SUMMARY.json  README.md  docker-compose.yml  locustfile.py  pytest.ini
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py  security.py
backend/app/engine/: __init__.py  ensemble.py  features.py  rules.py
backend/app/frontend/: index.html
backend/app/frontend/assets/: app.js  styles.css
backend/app/services/: audit.py  models.py  monitoring.py  queue.py  reporting.py  repository.py  scoring.py  store.py  training.py  transformer_text.py  webhooks.py
backend/data/: DATASET_CATALOG.md
backend/data/models/: behavioral_risk.joblib  identity_risk.joblib  model_metrics_summary.json  phishing_feature_risk.joblib  remark_risk.joblib  transaction_risk.joblib
backend/migrations/: 001_initial.sql  002_model_versions.sql  003_webhook_delivery_retries.sql  004_auth_jobs_connectors.sql  005_shadow_mode.sql  006_case_activity.sql
backend/scripts/: export_model_metrics.py  import_events.py  import_public_datasets.py  migrate.py  run_worker.py  smoke_test.py  train_baseline_models.py
backend/scripts/examples/: onboard_events.sample.json  phishing_events.sample.json  session_events.sample.json  transaction_events.sample.json
backend/tests/: test_api.py  test_graph.py  test_training.py
infra/: schema.sql
sdk/: fraudguard.js
