[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudguard-backend"
version = "0.4.0"
description = "FraudGuard backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<6",
  "numpy>=1.26,<3",
  "scikit-learn>=1.5,<2",
  "joblib>=1.4,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]